Validation messages improved

--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -33,69 +33,68 @@
   "form.validation.field.pattern": "Input does not match pattern",
   "form.validation.field.not.allowed": "Input does not match allowed values",
 
-  "form.validation.field.login.min.size": "Login is too short",
-  "form.validation.field.login.max.size": "Login is too long",
-  "form.validation.field.login.pattern": "Login does not meet pattern requirements",
+  "form.validation.field.login.min.size": "Login must be at least 3 characters long",
+  "form.validation.field.login.max.size": "Login can be up to 20 characters long",
+  "form.validation.field.login.pattern": "Login can consist of upper and lower case letters and numbers",
 
-  "form.validation.field.email_address.min.size": "Email is too short",
-  "form.validation.field.email_address.max.size": "Email is too long",
-  "form.validation.field.email_address.pattern": "Email does not meet pattern requirements",
+  "form.validation.field.email_address.min.size": "Email must be at least 6 characters long",
+  "form.validation.field.email_address.max.size": "Email can be up to 127 characters long",
+  "form.validation.field.email_address.pattern": "Incorrect email format",
 
-  "form.validation.field.firstname.min.size": "Firstname is too short",
-  "form.validation.field.firstname.max.size": "Firstname is too long",
-  "form.validation.field.firstname.pattern": "Firstname does not meet pattern requirements",
+  "form.validation.field.firstname.min.size": "Firstname must be at least 3 characters long",
+  "form.validation.field.firstname.max.size": "Firstname can be up to 31 characters long",
+  "form.validation.field.firstname.pattern": "Firstname can only consist of letters",
 
-  "form.validation.field.lastname.min.size": "Lastname is too short",
-  "form.validation.field.lastname.max.size": "Lastname is too long",
-  "form.validation.field.lastname.pattern": "Lastname does not meet pattern requirements",
+  "form.validation.field.lastname.min.size": "Lastname must be at least 2 characters long",
+  "form.validation.field.lastname.max.size": "Lastname can be up to 31 characters long",
+  "form.validation.field.lastname.pattern": "Lastname can only consist of letters",
 
-  "form.validation.field.password.min.size": "Password is too short",
-  "form.validation.field.password.max.size": "Password is too long",
-  "form.validation.field.password.pattern": "Password does not meet pattern requirements",
+  "form.validation.field.password.min.size": "Password must be at least 8 characters long",
+  "form.validation.field.password.max.size": "Password can be up to 64 characters long",
+  "form.validation.field.password.pattern": "Password must contain at least one: lowercase letter, uppercase letter, number and special character",
   "form.validation.passwords.not.match": "Passwords don't match",
   "form.validation.passwords.same": "Passwords are the same",
 
-  "form.validation.field.phone_number.min.size": "Phone number is too short",
-  "form.validation.field.phone_number.max.size": "Phone number is too long",
-  "form.validation.field.phone_number.pattern": "Phone number does not meet pattern requirements",
+  "form.validation.field.phone_number.min.size": "Phone number must be at least 9 characters long",
+  "form.validation.field.phone_number.max.size": "Phone number can be up to 15 characters long",
+  "form.validation.field.phone_number.pattern": "Phone number can only consist of digits and possibly the '+' sign at the beginning",
 
   "form.validation.field.confirmation_code.min.size": "One-time code is too short",
   "form.validation.field.confirmation_code.max.size": "One-time code is too long",
   "form.validation.field.confirmation_code.pattern": "One-time code does not meet pattern requirements",
 
-  "form.validation.field.language.min.size": "Language name is too short",
-  "form.validation.field.language.max.size": "Language name is too long",
-  "form.validation.field.language.pattern": "Language name does not meet pattern requirements",
-  "form.validation.field.language.not_allowed": "Language is not allowed",
+  "form.validation.field.language.min.size": "Language must be at least 2 characters long",
+  "form.validation.field.language.max.size": "Language can be up to 2 characters long",
+  "form.validation.field.language.pattern": "Language can only consist of lowercase letters",
+  "form.validation.field.language.not_allowed": "Language is not supported",
 
-  "form.validation.field.course_category.min.size": "Course category is too short",
-  "form.validation.field.course_category.max.size": "Course category is too long",
-  "form.validation.field.course_category.pattern": "Course category does not meet pattern requirements",
+  "form.validation.field.course_category.min.size": "Course category must be at least 1 characters long",
+  "form.validation.field.course_category.max.size": "Course category can be up to 1 characters long",
+  "form.validation.field.course_category.pattern": "Course category can only consist of uppercase letter",
   "form.validation.field.course_category.not_allowed": "Course category is not allowed",
 
-  "form.validation.field.image.min.size": "Image URL is too short",
-  "form.validation.field.image.max.size": "Image URL is too long",
+  "form.validation.field.image.min.size": "Image URL must be at least 5 characters long",
+  "form.validation.field.image.max.size": "Image URL can be up to 31 characters long",
   "form.validation.field.image.pattern": "Image URL does not meet pattern requirements",
 
-  "form.validation.field.comment.min.size": "Comment is too short",
-  "form.validation.field.comment.max.size": "Comment is too long",
-  "form.validation.field.comment.pattern": "Comment does not meet pattern requirements",
+  "form.validation.field.comment.min.size": "Comment must be at least 4 characters long",
+  "form.validation.field.comment.max.size": "Comment can be up to 255 characters long",
 
   "form.validation.field.price.min.size": "Price is too low",
   "form.validation.field.price.max.size": "Price is too big",
   "form.validation.field.price.pattern": "Price does not meet pattern requirements",
 
-  "form.validation.field.registration_number.min.size": "Registration number is too short",
-  "form.validation.field.registration_number.max.size": "Registration number is too long",
-  "form.validation.field.registration_number.pattern": "Registration number does not meet pattern requirements",
+  "form.validation.field.registration_number.min.size": "Registration number must be at least 4 characters long",
+  "form.validation.field.registration_number.max.size": "Registration number can be up to 7 characters long",
+  "form.validation.field.registration_number.pattern": "Registration number can only consist of uppercase letters and digits",
 
   "form.validation.field.production_year.min.size": "Production year is too short",
   "form.validation.field.production_year.max.size": "Production year is too long",
-  "form.validation.year.value": "Production year must be later than 2010 and less than the current year",
+  "form.validation.year.value": "Production year must be later than 2010 and less or equal current year",
 
-  "form.validation.field.vehicle_name.min.size": "Name is too short",
-  "form.validation.field.vehicle_name.max.size": "Name is too long",
-  "form.validation.field.vehicle_name.pattern": "Name does not meet pattern requirements",
+  "form.validation.field.vehicle_name.min.size": "Name must be at least 1 characters long",
+  "form.validation.field.vehicle_name.max.size": "Name can be up to 20 characters long",
+  "form.validation.field.vehicle_name.pattern": "Name can only consist of letters and digits",
 
   "landing.page.courses": "Driving license courses",
   "landing.page.left": "Category A",
