--- a/src/main/frontend/src/locales/pl/translation.json
+++ b/src/main/frontend/src/locales/pl/translation.json
@@ -33,69 +33,69 @@
   "form.validation.field.pattern": "Dane wejściowe nie pasują do wzorca",
   "form.validation.field.not.allowed": "Dane wejściowe nie odpowiadają dozwolonym wartościom",
 
-  "form.validation.field.login.min.size": "Login jest za krótki",
-  "form.validation.field.login.max.size": "Login jest za długi",
-  "form.validation.field.login.pattern": "Login nie spełnia wymagań wzorca",
+  "form.validation.field.login.min.size": "Login musi mieć minimum 3 znaki",
+  "form.validation.field.login.max.size": "Login może mieć maksymalnie 20 znaków",
+  "form.validation.field.login.pattern": "Login może się składać z małych i wielkich liter oraz cyfr",
 
-  "form.validation.field.email_address.min.size": "Email jest za krótki",
-  "form.validation.field.email_address.max.size": "Email jest za długi",
-  "form.validation.field.email_address.pattern": "Email nie spełnia wymagań wzorca",
+  "form.validation.field.email_address.min.size": "Email musi mieć minimum 6 znaków",
+  "form.validation.field.email_address.max.size": "Email może mieć maksymalnie 127 znaków",
+  "form.validation.field.email_address.pattern": "Niepoprawny format emaila",
 
-  "form.validation.field.firstname.min.size": "Imię jest za krótkie",
-  "form.validation.field.firstname.max.size": "Imię jest za długie",
-  "form.validation.field.firstname.pattern": "Imię nie spełnia wymagań wzorca",
+  "form.validation.field.firstname.min.size": "Imię musi mieć minimum 3 znaki",
+  "form.validation.field.firstname.max.size": "Imię może mieć maksymalnie 31 znaków",
+  "form.validation.field.firstname.pattern": "Imię może składać się tylko z liter",
 
-  "form.validation.field.lastname.min.size": "Nazwisko jest za krótkie",
-  "form.validation.field.lastname.max.size": "Nazwisko jest za długie",
-  "form.validation.field.lastname.pattern": "Nazwisko nie spełnia wymagań wzorca",
+  "form.validation.field.lastname.min.size": "Nazwisko musi mieć minimum 2 znaki",
+  "form.validation.field.lastname.max.size": "Nazwisko może mieć maksymalnie 31 znaków",
+  "form.validation.field.lastname.pattern": "Nazwisko może składać się tylko z liter",
 
-  "form.validation.field.password.min.size": "Hasło jest za krótkie",
-  "form.validation.field.password.max.size": "Hasło jest za długie",
-  "form.validation.field.password.pattern": "Hasło nie spełnia wymagań wzorca",
+  "form.validation.field.password.min.size": "Hasło musi mieć minimum 8 znaków",
+  "form.validation.field.password.max.size": "Hasło może mieć maksymalnie 64 znaki",
+  "form.validation.field.password.pattern": "Hasło musi zawierać co najmniej jedną: wielką i małą literę, cyfrę oraz znak specjalny",
   "form.validation.passwords.not.match": "Hasła nie są takie same",
   "form.validation.passwords.same": "Hasła są takie same",
 
-  "form.validation.field.phone_number.min.size": "Numer telefonu jest za krótki",
-  "form.validation.field.phone_number.max.size": "Numer telefonu jest za długi",
-  "form.validation.field.phone_number.pattern": "Numer telefonu nie spełnia wymagań wzorca",
+  "form.validation.field.phone_number.min.size": "Numer telefonu musi mieć minimum 9 znaków",
+  "form.validation.field.phone_number.max.size": "Numer telefonu może mieć maksymalnie 15 znaków",
+  "form.validation.field.phone_number.pattern": "Numer telefonu może składać się tylko z cyfr i ewentualnie znaku '+' na początku",
 
   "form.validation.field.confirmation_code.min.size": "Kod jednorazowy jest za krótki",
   "form.validation.field.confirmation_code.max.size": "Kod jednorazowy jest za długi",
   "form.validation.field.confirmation_code.pattern": "Kod jednorazowy nie spełnia wymagań wzorca",
 
-  "form.validation.field.language.min.size": "Nazwa języka jest za krótka",
-  "form.validation.field.language.max.size": "Nazwa języka jest za długa",
-  "form.validation.field.language.pattern": "Nazwa języka nie spełnia wymagań wzorca",
-  "form.validation.field.language.not_allowed": "Język nie jest dozwolony",
+  "form.validation.field.language.min.size": "Język musi mieć minimum 2 znaki",
+  "form.validation.field.language.max.size": "Język może mieć maksymalnie 2 znaki",
+  "form.validation.field.language.pattern": "Języka może składać się tylko z małych liter",
+  "form.validation.field.language.not_allowed": "Język nie jest obsługiwany",
 
-  "form.validation.field.course_category.min.size": "Kategoria kursu jest za krótka",
-  "form.validation.field.course_category.max.size": "Kategoria kursu jest za długa",
-  "form.validation.field.course_category.pattern": "Kategoria kursu nie spełnia wymagań wzorca",
+  "form.validation.field.course_category.min.size": "Kategoria kursu musi mieć minimum 1 znak",
+  "form.validation.field.course_category.max.size": "Kategoria kursu może mieć maksymalnie 1 znak",
+  "form.validation.field.course_category.pattern": "Kategoria kursu może składać się tylko z wielkiej litery",
   "form.validation.field.course_category.not_allowed": "Kategoria kursu nie jest dozwolony",
 
-  "form.validation.field.image.min.size": "Adres URL zdjęcia jest za krótki",
-  "form.validation.field.image.max.size": "Adres URL zdjęcia jest za długi",
-  "form.validation.field.image.pattern": "Adres URL zdjęcia nie spełnia wymagań wzorca",
+  "form.validation.field.image.min.size": "Adres URL zdjęcia musi mieć minimum 5 znaków",
+  "form.validation.field.image.max.size": "Adres URL zdjęcia może mieć maksymalnie 31 znaków",
+  "form.validation.field.image.pattern": "Niepoprawny format adres URL zdjęcia",
 
-  "form.validation.field.comment.min.size": "Treść komentarza jest za krótka",
-  "form.validation.field.comment.max.size": "Treść komentarza jest za długa",
+  "form.validation.field.comment.min.size": "Treść komentarza musi mieć minimum 4 znaki",
+  "form.validation.field.comment.max.size": "Treść komentarza może mieć maksymalnie 255 znaków",
   "form.validation.field.comment.pattern": "Treść komentarza nie spełnia wymagań wzorca",
 
   "form.validation.field.price.min.size": "Cena jest za mała",
   "form.validation.field.price.max.size": "Cena jest za duża",
   "form.validation.field.price.pattern": "Cena nie spełnia wymagań wzorca",
 
-  "form.validation.field.registration_number.min.size": "Numer rejestracyjny jest za krótki",
-  "form.validation.field.registration_number.max.size": "Numer rejestracyjny jest za długi",
-  "form.validation.field.registration_number.pattern": "Numer rejestracyjny nie spełnia wymagań wzorca",
+  "form.validation.field.registration_number.min.size": "Numer rejestracyjny musi mieć minimum 4 znaki",
+  "form.validation.field.registration_number.max.size": "Numer rejestracyjny może mieć maksymalnie 7 znaków",
+  "form.validation.field.registration_number.pattern": "Numer rejestracyjny może składać się tylko z wielkich liter oraz cyfr",
 
-  "form.validation.field.production_year.min.size": "Rok produkcji jest za krótki",
-  "form.validation.field.production_year.max.size": "Rok produkcji jest za długi",
-  "form.validation.year.value": "Rok produkcji musi być późniejszy niż 2010 i mniejszy niż aktualny",
+  "form.validation.field.production_year.min.size": "Rok produkcji musi składać się z minimum 4 cyfr",
+  "form.validation.field.production_year.max.size": "Rok produkcji może składać się z maksymalnie 4 cyfr",
+  "form.validation.year.value": "Rok produkcji musi być późniejszy niż 2010 i mniejszy bądź równy aktualnemu",
 
-  "form.validation.field.vehicle_name.min.size": "Nazwa jest za krótka",
-  "form.validation.field.vehicle_name.max.size": "Nazwa jest za długa",
-  "form.validation.field.vehicle_name.pattern": "Nazwa nie spełnia wymagań wzorca",
+  "form.validation.field.vehicle_name.min.size": "Nazwa musi mieć minimum 1 znak",
+  "form.validation.field.vehicle_name.max.size": "Nazwa może mieć maksymalnie 20 znaków",
+  "form.validation.field.vehicle_name.pattern": "Nazwa może składać się tylko z małych liter i cyfr",
 
   "landing.page.courses": "Kursy na prawo jazdy",
   "landing.page.left": "kategoria A",
