Initial values improved, small changes in validation errors display

--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -153,6 +153,7 @@
   "action": "Action",
   "login": "Login",
   "emailAddress": "Email address",
+  "newEmailAddress": "New email address",
   "password": "Password",
   "oldPassword": "Old password",
   "newPassword": "New password",
