--- a/src/main/frontend/src/locales/pl/translation.json
+++ b/src/main/frontend/src/locales/pl/translation.json
@@ -268,8 +268,18 @@
   "productionYear": "Rok produkcji",
   "registrationNumber": "Numer rejestracyjny",
   "image": "Odnośnik do zdjęcia",
+  "lecturesHours": "Liczba godzin teoretycznych",
+  "drivingHours": "Liczba godzin praktycznych",
 
   "edit.vehicle": "Edytuj dane pojazd",
   "edit.vehicle.title": "Edytuj pojazd",
-  "edit.vehicle.success": "Pojazd został pomyślnie zmodfikowany"
+  "edit.vehicle.success": "Pojazd został pomyślnie zmodfikowany",
+
+  "begin.course.title1": "Wybierz kategorię kursu,",
+  "begin.course.title2": "na który chcesz się zapisać",
+  "begin.course.success": "Gratulacje! Rozpocząłeś kurs na prawo jazdy",
+
+  "exception.course_exception.already_assigned_exception": "Kursant jest już zapisany na inny kurs",
+  "exception.course_exception.already_completed_exception": "Kursant ukończył już wcześniej ten kurs",
+  "exception.not_found_exception.course_details_not_found_exception": "Szczegóły kursu nie zostały znalezione"
 }
