--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -281,5 +281,19 @@
 
   "exception.course_exception.already_assigned_exception": "Trainee is already enrolled in another course",
   "exception.course_exception.already_completed_exception": "Trainee has already completed this course",
-  "exception.not_found_exception.course_details_not_found_exception": "Course details not found"
+  "exception.not_found_exception.course_details_not_found_exception": "Course details not found",
+  "exception.course_exception.no_ongoing_course_exception": "Trainee does not currently have any started course",
+
+  "my.payments.cancel.success": "Payment has been successfully cancelled",
+  "paymentStatus": "Payment status",
+  "value": "Value",
+  "traineeComment": "Trainee comment",
+  "adminComment": "Admin comment",
+  "creationDate": "Creation date",
+  "modificationDate": "Last modified date",
+
+  "CANCELLED": "Cancelled",
+  "IN_PROGRESS": "In progress",
+  "CONFIRMED": "Confirmed",
+  "REJECTED": "Rejected"
 }
