--- a/src/main/frontend/src/locales/pl/translation.json
+++ b/src/main/frontend/src/locales/pl/translation.json
@@ -281,5 +281,19 @@
 
   "exception.course_exception.already_assigned_exception": "Kursant jest już zapisany na inny kurs",
   "exception.course_exception.already_completed_exception": "Kursant ukończył już wcześniej ten kurs",
-  "exception.not_found_exception.course_details_not_found_exception": "Szczegóły kursu nie zostały znalezione"
+  "exception.not_found_exception.course_details_not_found_exception": "Szczegóły kursu nie zostały znalezione",
+  "exception.course_exception.no_ongoing_course_exception": "Kursant nie posiada aktualnie żadnego rozpoczętego kursu",
+
+  "my.payments.cancel.success": "Płatność została pomyślnie anulowana",
+  "paymentStatus": "Status płatności",
+  "value": "Wartość",
+  "traineeComment": "Komentarz kursanta",
+  "adminComment": "Komentarz administratora",
+  "creationDate": "Data zgłoszenia",
+  "modificationDate": "Data ostatniej modyfikacji",
+
+  "CANCELLED": "Anulowana",
+  "IN_PROGRESS": "W trakcie",
+  "CONFIRMED": "Zatwierdzona",
+  "REJECTED": "Odrzucona"
 }
